2005-05-05  Paul Brook  <paul@codesourcery.com>

	* gas/i386/i386.exp: Don't run divide test on vxworks.

2005-05-05  Mike Frysinger  <vapier@gentoo.org>

	* gas/sh/basic.exp: Replace linux-gnu with linux-* to allow for
	versions of Linux which do not use glibc.
	* gas/vax/vax.exp: Likewise.

2005-05-05  Paul Brook  <paul@codesourcery.com>

	* lib/gas-defs.exp (regexp_diff): Pass test if last line is "#...".

2005-04-26  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/all/assign.s: Make `x' and `y' global.

2005-04-25  Jan Beulich  <jbeulich@novell.com>

	* gas/macros/badarg.s: Add tests for collisions between/among macro
	parameters and local symbols.
	* gas/macros/badarg.l: Adjust.

2005-04-20  Jan Beulich  <jbeulich@novell.com>

	* gas/elf/struct.s: Adjust to not get into alignment issues.
	* gas/elf/struct.d: Adjust for the above and the test's name.

2005-04-19  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/padlock.d: Updated.

2005-04-19  Andreas Schwab  <schwab@suse.de>

	* gas/ia64/invalid-ar.l: Adapt to changed error message.

2005-04-18  Jan Beulich  <jbeulich@novell.com>

	* gas/macros/purge.[ls]: New.
	* gas/macros/macros.exp: Run new test.

2005-04-15  Jan Beulich  <jbeulich@novell.com>

	* gas/elf/struct.[sd]: New.
	* gas/elf/elf.exp: Run new test.

2005-04-15  Alan Modra  <amodra@bigpond.net.au>

	* gas/all/assign.s: New.
	* gas/all/assign.d: New.
	* gas/all/gas.exp: Run it.

2005-04-13  Maciej W. Rozycki  <macro@linux-mips.org>

	* gas/mips/ldstla-32.s: Exclude offsets that are now meant to fail
	and include more instructions/offsets that are meant to succeed.
	Use $4 instead $3 to avoid register dependencies.
	* gas/mips/ldstla-32.d: Update accordingly.
	* gas/mips/ldstla-32-shared.d: Likewise.
	* gas/mips/ldstla-32-mips3.d: New test based on the above, except
	for mips3.
	* gas/mips/ldstla-32-mips3-shared.d: Similarly, for PIC.
	* gas/mips/ldstla-32-mips3.s: Source for the new tests.
	* gas/mips/ldstla-32-1.s: New test for offsets that are meant to
	fail.